<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="70dp"
    android:layout_marginRight="30dp"
    android:background="#fff"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="22dp"
            android:gravity="center_horizontal"
            android:text="Adding new event"
            android:textColor="#2c84e2"
            android:textSize="23sp"
            android:textStyle="bold" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/event_title_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_place"
                android:drawableLeft="@drawable/ic_users"
                android:drawableTint="#2c84e2"
                android:hint="@string/title_of_event"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_description"
                android:drawableLeft="@drawable/ic_description"
                android:drawableTint="#2c84e2"
                android:hint="@string/description_of_event"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/bt_cancel"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_margin="30dp"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_exit"
                />

            <Button
                android:id="@+id/bt_save_event"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_toEndOf="@+id/bt_cancel"
                android:layout_toRightOf="@+id/bt_cancel"
                android:background="@color/white"
                android:text="@string/Ok"
                android:textAllCaps="false"
                android:textColor="#2c84e2"
                android:textSize="18sp" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>

